<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/nav_trades"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/nav_trades" />
    <item
        android:id="@+id/nav_analytics"
        android:icon="@android:drawable/ic_menu_report_image"
        android:title="@string/nav_analytics" />
    <item
        android:id="@+id/nav_import_export"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/nav_import_export" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/nav_settings" />
</menu>
